--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dayjs": "^1.10.5",
     "firebase": "^8.8.1",
     "immer": "^9.0.6",
-    "next": "11.1.0",
+    "next": "^11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-intersection-observer": "^8.32.0",
